@@ -1,3 +1,9 @@
+2009-04-24  Patrice Dumas <pertusus@free.fr>
+
+	* README: add a PolicyKit.conf excerpt, thanks to nb.
+	* halevt-mount/halevt-mount.c: only set the umask= if the filesystem
+	supports it (report from nb).
+
 2009-01-31  Patrice Dumas <pertusus@free.fr>
 
 	* configure.ac, NEWS: 0.1.4 release
